<resources>
    <string name="app_name">My work hours</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_records">Edit records</string>
    <string name="action_export">Export records</string>
    <string name="button_start_work">Start work</string>
    <string name="button_end_work">End work</string>
    <string name="label_start_time">Start time (HH.mm)</string>
    <string name="label_start_date">Date</string>
    <string name="label_end_time">End time (HH.mm)</string>
    <string name="label_start_to_end_time">Start time - End time</string>
    <string name="label_hours_today">Hours today</string>
    <string name="label_all_time_plusminus">All time +/-</string>
    <string name="label_status">Status</string>
    <string name="label_in">IN</string>
    <string name="label_out">OUT</string>
    <string name="label_hint_now">(now)</string>
    <string name="label_add_worktime">Add worktime</string>
    <string name="label_modify_worktime">Modify worktime</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_ok">OK</string>
    <string name="pref_worktime_today">PreferenceWorktimeToday</string>
    <string name="pref_plusminus_hours">PreferencePlusMinusHours</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="button_edit">Edit</string>
    <string name="records_document_title">MyWorkHoursRecords</string>
    <string name="label_all_recods">All records</string>
    <string name="title_overlapping_record">Overlapping record</string>
    <string name="alert_overlapping_record">This would overlap an existing record</string>
    <string name="title_invalid_record">Invalid record</string>
    <string name="title_invalid_time">Invalid time</string>
    <string name="alert_invalid_time_format">Please give the time in format HH.mm (e.g. 15.40).</string>
    <string name="alert_invalid_minutes">Minutes must be 0-59.</string>
    <string name="alert_invalid_hours">Hours must be 0-23.</string>
    <string name="alert_remove_record_confirm">Do you want to remove record</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="title_missing_open_record">Work not started</string>
    <string name="alert_missing_open_record">Work not started? Cannot find open record.</string>
    <string name="label_backup">backup</string>
    <string name="label_attached">attached</string>
    <string name="title_remove_record">Remove record</string>
    <string name="alert_end_time_before">End time must be before start time.</string>
    <string name="title_activity_settings2">Settings</string>
</resources>
