<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lgi.myworkhours.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_start_time" />
            <EditText android:id="@+id/input_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:hint="@string/label_hint_now"
                android:textColorHint="@color/colorHint" />
            <Button android:id="@+id/button_start_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_start_work" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_end_time" />
            <EditText android:id="@+id/input_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                android:enabled="false"
                android:hint="@string/label_hint_now"
                android:textColorHint="@color/colorHint" />
            <Button android:id="@+id/button_end_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_end_work"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/label_status"
        android:layout_marginBottom="5dp"/>
    <TextView android:id="@+id/label_status_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="@string/label_out"
        android:textColor="@color/colorRed"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/label_hours_today"
        android:layout_marginBottom="5dp"/>
    <TextView android:id="@+id/label_hours_today_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="0h 0min"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/label_all_time_plusminus"
        android:layout_marginBottom="5dp"/>
    <TextView android:id="@+id/label_plusminus_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24dp"
        android:text="0h 0min"/>
</LinearLayout>
