<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.lgi.myworkhours.ModifyRecordActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_start_date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:gravity="center_horizontal">
        <Button android:id="@+id/button_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_action_calendar_day"
            android:backgroundTint="@color/colorDarkGray"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-light"
            />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">
        <TextView
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_start_time"
            android:fontFamily="sans-serif-light"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.2"
            android:textAlignment="center"/>
        <TextView
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_end_time"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">
        <EditText android:id="@+id/input_start_time"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_weight="0.2"
            android:textAlignment="center"/>
        <EditText android:id="@+id/input_end_time"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789." />
    </LinearLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:onClick="onCancelButtonClick"
            android:backgroundTint="@color/colorDarkGray"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-light"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:onClick="onSaveButtonClick"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#fff"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>
</LinearLayout>
